--- a/apps/kamsguard-web/src/app/home/home.component.html
+++ b/apps/kamsguard-web/src/app/home/home.component.html
@@ -21,7 +21,7 @@
       </div>
     </section>
     <footer class="footer">
-      <p>&copy; 2024 FireVu. All rights reserved.</p>
+      <p>&copy; 2024 KamsGuard. All rights reserved.</p>
     </footer>
   </div>
   
