--- a/apps/kamsguard-web/src/custom-theme.scss
+++ b/apps/kamsguard-web/src/custom-theme.scss
@@ -1,12 +1,6 @@
 
 // Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
 // Define the theme object.
@@ -21,16 +15,23 @@ $kamsguard-web-theme: mat.define-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 :root {
   @include mat.all-component-themes($kamsguard-web-theme);
 }
 
-// Comment out the line below if you want to use the pre-defined typography utility classes.
-// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
-// @include mat.typography-hierarchy($kamsguard-web-theme);
+html, body {
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  background-color: #f2f1f1;
+}
 
-// Comment out the line below if you want to use the deprecated `color` inputs.
-// @include mat.color-variants-backwards-compatibility($kamsguard-web-theme);
+.h2 {
+  margin-bottom: 14px;
+  font-size: 20px;
+  color: #21325D;
+}
+.card-header {
+  color: #21325D;
+  font-size: 12px !important;
+}
