--- a/apps/kamsguard-web/src/app/app.component.scss
+++ b/apps/kamsguard-web/src/app/app.component.scss
@@ -44,10 +44,10 @@
   
   .content {
     flex: 1;
-    // padding: 20px;
-    // overflow-y: auto;
+    padding: 20px;
+    overflow-y: auto;
     // margin-left: 250px;
-    // transition: margin-left 0.3s ease; /* Add a transition for smooth animation */
+    transition: margin-left 0.3s ease; /* Add a transition for smooth animation */
   }
   
   /* Style content differently when sidebar is hidden */
