--- a/apps/kamsguard-web/src/app/layout/sidenav/sidenav.component.scss
+++ b/apps/kamsguard-web/src/app/layout/sidenav/sidenav.component.scss
@@ -20,7 +20,10 @@
     // font-weight: bold;
   }
 }
-
+mat-icon {
+  justify-content: center;
+  padding-top: 4px;
+}
 .sidebar {
   background-color: #FFFFFF;
   width: 300px;
