--- a/apps/kamsguard-web/src/app/live-stream/live-stream.component.html
+++ b/apps/kamsguard-web/src/app/live-stream/live-stream.component.html
@@ -1,7 +1,3 @@
 <div class="live-viewer">
-    <video id="liveVideo" controls autoplay>
-      <source src="http://192.168.1.25/display_pic.cgi?cam=1&res=hi&format=h264" type="video/h264">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  
+  <video id="liveVideo" controls autoplay muted></video>
+</div>
