--- a/apps/kamsguard-web/src/app/layout/sidenav/sidenav.component.html
+++ b/apps/kamsguard-web/src/app/layout/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
       <ul *ngIf="isDeviceManagementSubmenuOpen" class="sub-menu">
         <li>
           <a
-            routerLink="/device-management"
+            routerLink="/connected-devices"
             routerLinkActive="active"
             (click)="handleLinkClick()"
             ><span class="menu-icon material-icons">cast_connected</span
