--- a/apps/kamsguard-web/src/app/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/layout/header/header.component.html
@@ -18,7 +18,7 @@
  </button>
    &nbsp;
  
- <button mat-button routerLink="/user-management" routerLinkActive="active" class="neumorphic-button">Profile</button>
+ <button mat-button routerLink="/auth" routerLinkActive="active" class="neumorphic-button">Profile</button>
  
  </mat-toolbar>
  
