--- a/apps/kamsguard-web/src/app/live-stream/live-stream.component.html
+++ b/apps/kamsguard-web/src/app/live-stream/live-stream.component.html
@@ -1,3 +1,4 @@
 <div class="live-viewer">
-  <video id="liveVideo" controls autoplay muted></video>
+  <video id="liveVideo" controls muted autoplay style="display: none;"></video>
+  <button (click)="startStream()">Start Video Stream</button>
 </div>
