added landing page

--- a/apps/kamsguard-web/src/app/home/home.component.html
+++ b/apps/kamsguard-web/src/app/home/home.component.html
@@ -1,9 +1,46 @@
 <div class="home-container">
-  <mat-toolbar color="primary" class="header">
-    <span>Welcome to KamsGuard</span>
-    <span class="toolbar-spacer"></span>
-    <span>Ensuring Safety Through Advanced Fire Detection</span>
-  </mat-toolbar>
+  <section class="hero">
+    <img
+      src="../../img/content-bottom-bgorg1-03-1.jpg"
+      alt="Hero Image"
+      class="hero-image"
+    />
+    <div class="hero-text">
+      <h1>Protecting Lives with Advanced Fire Detection</h1>
+      <p>Discover how our technology keeps you safe.</p>
+      <button mat-raised-button color="primary">Learn More</button>
+    </div>
+  </section>
+
+  <section class="information">
+    <div class="info-content">
+      <h2>About KamsGuard</h2>
+      <p>
+        Learn more about our mission, values, and how we provide cutting-edge
+        fire detection solutions.
+      </p>
+    </div>
+    <img
+      src="../../assets/img/content-bottom-bgorg1-03-1.jpg"
+      alt="Information Image"
+      class="info-image"
+    />
+  </section>
+
+  <section class="information">
+    <img
+      src="../img/Kamsware-Fireprotection-System.jpg"
+      alt="Information Image"
+      class="info-image"
+    />
+    <div class="info-content">
+      <h2>About KamsGuard</h2>
+      <p>
+        Learn more about our mission, values, and how we provide cutting-edge
+        fire detection solutions.
+      </p>
+    </div>
+  </section>
 
   <section class="features">
     <mat-card class="feature-card">
@@ -30,8 +67,28 @@
       </mat-card-content>
     </mat-card>
   </section>
-
-  <footer class="footer">
-    <p>&copy; 2024 KamsGuard. All rights reserved.</p>
-  </footer>
+  <section class="industrial-solutions">
+    <div class="industrial-solutions-content">
+      <h2>Industrial Solutions</h2>
+      <p>
+        Preventive maintenance and early detection of impending failures are becoming increasingly important areas for ensuring operational facilities and optimizing operating costs.
+      </p>
+      <p>
+        Without customer-optimized IT solutions, a secure operation of logistics centers, production facilities, data centers, recycling yards, and even airport security is no longer conceivable or achievable.
+      </p>
+      <p>
+        Predictive maintenance and artificial intelligence (AI) will be of ever greater importance in the future.
+      </p>
+      <p>
+        Remote monitoring systems help greatly simplify and reduce maintenance/service times.
+      </p>
+      <p>
+        Our extensive experience in plant construction, fire protection, and IT development enables us to deliver and implement customized solutions for these respective areas.
+      </p>
+      <p>
+        Contact us and let’s discuss your operational safety.
+      </p>
+    </div>
+  </section>
+  
 </div>
