--- a/apps/kamsguard-web/src/app/app.component.html
+++ b/apps/kamsguard-web/src/app/app.component.html
@@ -8,7 +8,8 @@
 
  <div class="content" [ngClass]="isSidebarVisible ? 'with-sidebar' : 'without-sidebar'">
   <!-- Main content goes here -->
+   
   <router-outlet></router-outlet>
 </div>
 
-<!-- <app-footer></app-footer>  -->
+<app-footer></app-footer> 
