--- a/apps/kamsguard-web/src/app/layout/footer/footer.component.html
+++ b/apps/kamsguard-web/src/app/layout/footer/footer.component.html
@@ -1,13 +1,10 @@
-<footer>
-    <div class="container">
-      <div class="row">
-        <div class=" text-center">
-          <div class="site-logo">KamsGuard Solutions</div>
-          <p class="">Copyright © 2024 KamsGuard Solutions</p>
-      
-      </div>
-       
-      </div>
-    </div>
-  </footer>
-  
+<footer class="footer">
+  <ul class="footer-links">
+    <li><a href="#about-us">About Us</a></li>
+    <li><a href="#it-services">IT Services</a></li>
+    <li><a href="#industrial-solutions">Industrial Solutions</a></li>
+    <li><a href="#products">Products</a></li>
+    <li><a href="#cookies-policy">Cookies Policy</a></li>
+  </ul>
+  <p>&copy; 2024 KamsGuard. All rights reserved.</p>
+</footer>
