--- a/apps/kamsguard-web/src/app/layout/footer/footer.component.scss
+++ b/apps/kamsguard-web/src/app/layout/footer/footer.component.scss
@@ -1,11 +1,44 @@
-footer {
-    height: 40px;
-    padding: 15px;
-    background-color: #1995AD;
-    width: 100%;
-    position: fixed; bottom:0px;
-}
+$primary-color: #21325D;
+$secondary-color: #627792;
+$card-color: #FFFFFF;
+$text-color: #21325D;
+$header-color: #627792;
+$highlight-color: #FC5546;
+$background-color: #FFFFFF;
+$shadow-color: rgba(0, 0, 0, 0.1);
 
-.site-logo {
-    font-size: 0.8em;
-}
+
+.footer {
+    text-align: center;
+    padding: 20px;
+    background-color: $card-color;
+    color: $primary-color;
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 0 -4px 8px $shadow-color;
+    margin-top: auto;
+
+    .footer-links {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        display: inline;
+        margin: 0 10px;
+        a {
+          color: $primary-color;
+          text-decoration: none;
+          font-size: 1em;
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+
+    p {
+      margin: 10px 0 0;
+      font-size: 1em;
+    }
+  }
