--- a/apps/kamsguard-web/src/app/home/home.component.scss
+++ b/apps/kamsguard-web/src/app/home/home.component.scss
@@ -24,13 +24,14 @@ $shadow-color: rgba(0, 0, 0, 0.1);
     .hero-image {
       width: 100%;
       height: auto;
-      max-height: 400px;
+      max-height: 800px;
       object-fit: cover;
+      opacity: 0.9;
     }
 
     .hero-text {
       position: absolute;
-      top: 50%;
+      top: 40%;
       left: 20px; // Adjust this value as needed
       transform: translateY(-50%);
       color: $card-color;
@@ -45,7 +46,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 
       p {
         margin: 10px 0;
-        font-size: 1.2em;
+        font-size: 1.8em;
       }
 
       button {
@@ -57,7 +58,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
   .information {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin-bottom: 40px;
 
     .info-content {
@@ -141,46 +142,56 @@ $shadow-color: rgba(0, 0, 0, 0.1);
     }
   }
 
+  // .footer {
+  //   text-align: center;
+  //   padding: 20px;
+  //   background-color: $card-color;
+  //   color: $primary-color;
+  //   width: 100%;
+  //   border-radius: 15px;
+  //   box-shadow: 0 -4px 8px $shadow-color;
+  //   margin-top: auto;
 
+  //   .footer-links {
+  //     list-style: none;
+  //     padding: 0;
+  //     margin: 0;
 
+  //     li {
+  //       display: inline;
+  //       margin: 0 10px;
 
-  .footer {
-    text-align: center;
-    padding: 20px;
-    background-color: $card-color;
-    color: $primary-color;
-    width: 100%;
-    border-radius: 15px;
-    box-shadow: 0 -4px 8px $shadow-color;
-    margin-top: auto;
+  //       a {
+  //         color: $primary-color;
+  //         text-decoration: none;
+  //         font-size: 1em;
 
-    .footer-links {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+  //         &:hover {
+  //           text-decoration: underline;
+  //         }
+  //       }
+  //     }
+  //   }
 
-      li {
-        display: inline;
-        margin: 0 10px;
-
-        a {
-          color: $primary-color;
-          text-decoration: none;
-          font-size: 1em;
-
-          &:hover {
-            text-decoration: underline;
-          }
-        }
-      }
-    }
-
-    p {
-      margin: 10px 0 0;
-      font-size: 1em;
-    }
-  }
+  //   p {
+  //     margin: 10px 0 0;
+  //     font-size: 1em;
+  //   }
+  // }
 }
+/* Footer setup */
+.app-footer {
+  margin-top: auto; /* Pushes the footer to the bottom */
+  background-color: $card-color;
+  color: $primary-color;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0 -4px 8px $shadow-color;
+  border-radius: 15px;
+  width: 100%;
+}
+
+
 
 @media (max-width: 768px) {
   .home-container {
@@ -195,6 +206,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
     .information, .details {
       flex-direction: column;
       align-items: center;
+      // justify-content:space-between;
 
       .info-image {
         max-width: 100%;
