added event service

--- a/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.html
@@ -30,7 +30,7 @@
             routerLinkActive="active"
             (click)="handleLinkClick()"
             ><span class="menu-icon material-icons">cast_connected</span
-            ><span class="menu-text">Connected Devices</span></a
+            ><span class="menu-text">Connected Detectors</span></a
           >
         </li>
         <li>
