--- a/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
+++ b/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
@@ -26,7 +26,7 @@ mat-icon {
 }
 .sidebar {
   background-color: #FFFFFF;
-  width: 300px;
+  // width: 300px;
   padding: 20px;
   position: fixed;
   height: 100%;
